# android_kernel_xiaomi_sm8635-modules

./: Android.bp
qcom/opensource/display-drivers/: Android.mk  BUILD.bazel  display_driver_build.bzl  display_modules.bzl  target.bzl
qcom/opensource/display-drivers/include/uapi/display/drm/: mi_disp.h
qcom/opensource/display-drivers/msm/: Android.mk  Kbuild  msm_drv.h  msm_gem.c  msm_gem_prime.c  msm_smmu.c  sde_dsc_helper.c  sde_power_handle.c
qcom/opensource/display-drivers/msm/dp/: dp_aux.c  dp_mst_drm.c  dp_panel.c
qcom/opensource/display-drivers/msm/dsi/: dsi_clk_manager.c  dsi_defs.h  dsi_display.c  dsi_display.h  dsi_drm.c  dsi_panel.c  dsi_panel.h
qcom/opensource/display-drivers/msm/mi_disp/: mi_disp_feature.c  mi_disp_file.c  mi_disp_flatmode.c  mi_disp_nvt_alpha_data.h  mi_disp_procfs.c  mi_disp_sysfs.c  mi_dsi_display.c  mi_dsi_display.h  mi_dsi_panel.c  mi_dsi_panel.h  mi_panel_id.h  mi_sde_connector.c  mi_sde_connector.h  mi_sde_encoder.h
qcom/opensource/display-drivers/msm/sde/: sde_color_processing.c  sde_connector.c  sde_connector.h  sde_crtc.c  sde_encoder.c  sde_encoder_phys_cmd.c  sde_encoder_phys_vid.c  sde_encoder_phys_wb.c  sde_hw_catalog.c  sde_hw_reg_dma_v1_color_proc.c  sde_kms.c  sde_rm.c
